# ChangeLog for dev-php/PHP_TokenStream
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PHP_TokenStream/ChangeLog,v 1.7 2013/06/23 13:47:44 jer Exp $

  23 Jun 2013; Jeroen Roovers <jer@gentoo.org> PHP_TokenStream-1.1.3.ebuild:
  Stable for HPPA too.

  21 Aug 2012; Ole Markus With <olemarkus@gentoo.org>
  -PHP_TokenStream-1.0.1.ebuild:
  Removing old version

  21 Aug 2012; Johannes Huber <johu@gentoo.org> PHP_TokenStream-1.1.3.ebuild:
  Stable for x86, wrt bug #430088

  07 Aug 2012; Agostino Sarubbo <ago@gentoo.org> PHP_TokenStream-1.1.3.ebuild:
  Stable for amd64, wrt bug #430088

  22 Jun 2012; Matti Bickel <mabi@gentoo.org> PHP_TokenStream-1.1.3.ebuild:
  make repoman happy, also remove redundant php requirement

*PHP_TokenStream-1.1.3 (22 Jun 2012)

  22 Jun 2012; Matti Bickel <mabi@gentoo.org> +PHP_TokenStream-1.1.3.ebuild:
  version bump, epear import

  14 Dec 2011; Matti Bickel <mabi@gentoo.org> php-tokenstream-1.0.1.ebuild,
  php-tokenstream-1.1.0.ebuild:
  Merging categories dev-php5 and dev-php (bug #324665)

  12 Nov 2011; Ole Markus With <olemarkus@gentoo.org>
  php-tokenstream-1.1.0.ebuild:
  Fixed dependency on pear-1.9.4 (bug 390281)

*php-tokenstream-1.1.0 (03 Nov 2011)

  03 Nov 2011; Ole Markus With <olemarkus@gentoo.org>
  +php-tokenstream-1.1.0.ebuild:
  Version bump

  28 Jun 2011; Ole Markus With <olemarkus@gentoo.org>
  -php-tokenstream-1.0.0.ebuild:
  Removed older version

  28 Jun 2011; Ole Markus With <olemarkus@gentoo.org>
  php-tokenstream-1.0.1.ebuild:
  Added missing PHP_PEAR_URI

  24 May 2011; Markos Chandras <hwoarang@gentoo.org>
  php-tokenstream-1.0.1.ebuild:
  Stable on amd64 wrt bug #368293

  23 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  php-tokenstream-1.0.1.ebuild:
  x86 stable wrt bug #368293

*php-tokenstream-1.0.1 (26 Mar 2011)

  26 Mar 2011; <olemarkus@gentoo.org> +php-tokenstream-1.0.1.ebuild:
  Version bump. Bug #359969. Thanks to Denny
