@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PHP_TokenStream/PHP_TokenStream-1.1.3.ebuild,v 1.5 2013/06/23 13:47:44 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PHP_TokenStream/PHP_TokenStream-1.1.3.ebuild,v 1.6 2014/05/12 13:17:30 kensington Exp $
 
 EAPI=4
 
@@ -10,7 +10,7 @@ PHP_PEAR_PKG_NAME="PHP_TokenStream"
 inherit php-pear-r1
 
 DESCRIPTION="Wrapper around PHP's tokenizer extension."
-HOMEPAGE="pear.phpunit.de"
+HOMEPAGE="http://pear.phpunit.de"
 SRC_URI="http://pear.phpunit.de/get/PHP_TokenStream-1.1.3.tgz"
 
 LICENSE="BSD"
