@@ -1,6 +1,10 @@
 # ChangeLog for dev-php/PHP_TokenStream
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PHP_TokenStream/ChangeLog,v 1.7 2013/06/23 13:47:44 jer Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PHP_TokenStream/ChangeLog,v 1.8 2014/05/12 13:17:30 kensington Exp $
+
+  12 May 2014; Michael Palimaka <kensington@gentoo.org>
+  PHP_TokenStream-1.1.3.ebuild:
+  Specify protocol in HOMEPAGE.
 
   23 Jun 2013; Jeroen Roovers <jer@gentoo.org> PHP_TokenStream-1.1.3.ebuild:
   Stable for HPPA too.
